src/test/resources/semantic/reject/voidVariableDecl.ul
void main() {
}

void foo() {
    void bar;
}
